corrected some issues with overflow and whitespace showing on right hand side of page with a whole document css rule

--- a/assets/style.css
+++ b/assets/style.css
@@ -1,3 +1,12 @@
+html,body
+{
+    width: 100%;
+    height: 100%;
+    margin: 0px;
+    padding: 0px;
+    overflow-x: hidden; 
+}
+
 /*Content Styling*/
 
 .page-title{
@@ -85,6 +94,7 @@ margin-bottom: 5px;
 
 .shark-carousel{
     margin: auto;
+    overflow: hidden;
 }
 
 .section-one{
